docs/tests/nameres/control_flow/valid/While.src
// Valid 

fn void main() {
    while (true) { }
}