docs/tests/nameres/control_flow/invalid/ElifNoExpr.src
// Invalid 

fn void main() {
    if (1) {

    } elif () {
        
    }
}